Dodalem obsluge plikow zarowno dla new_game jak i load_game (tam gdzie sie dalo). Potrzebuje miec zrobiony ui do reszty zeby napisac logike rozgrywania sezonu. Patrzylem tez na ten kalendarz i niby cos tam da sie zrobic, ale idk jeszcze jak, cos tam napisalem, ale nie dzialalo to usunalem.

--- a/FM_QT_Project_vol2.vcxproj.filters
+++ b/FM_QT_Project_vol2.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="CustomCalendarWidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="playable_classes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="NewGame.h">
@@ -71,5 +74,10 @@
     <QtUic Include="LoadGame.ui">
       <Filter>Form Files</Filter>
     </QtUic>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="playable_classes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
