Dodałem page_team do content widgeta w LoadGame, przycisk do niego też działa

--- a/FM_QT_Project_vol2.vcxproj
+++ b/FM_QT_Project_vol2.vcxproj
@@ -93,6 +93,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <QtRcc Include="LoadGame.qrc" />
     <QtRcc Include="NewGame.qrc" />
     <QtRcc Include="StartScreen.qrc" />
     <QtUic Include="LoadGame.ui" />
